// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot: basic_synth > basic_synth 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          50,
          50,
          50,
          20,
        ],
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "float",
        ],
        "patching_rect": [
          50,
          110,
          80,
          22,
        ],
        "text": "mtof",
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          170,
          80,
          22,
        ],
        "text": "cycle~ 440",
      },
    },
    {
      "box": {
        "id": "obj-4",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          230,
          80,
          22,
        ],
        "text": "*~ 0.5",
      },
    },
    {
      "box": {
        "id": "obj-5",
        "maxclass": "gain~",
        "numinlets": 2,
        "numoutlets": 2,
        "outlettype": [
          "signal",
          "signal",
        ],
        "patching_rect": [
          50,
          290,
          34,
          130,
        ],
      },
    },
    {
      "box": {
        "id": "obj-6",
        "maxclass": "ezdac~",
        "numinlets": 2,
        "numoutlets": 0,
        "patching_rect": [
          50,
          350,
          52,
          36,
        ],
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "number -> mtof -> cycle~ -> *~ -> gain~ -> ezdac~",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-2",
          0,
        ],
        "source": [
          "obj-1",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-4",
          0,
        ],
        "source": [
          "obj-3",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-5",
          0,
        ],
        "source": [
          "obj-4",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-6",
          0,
        ],
        "source": [
          "obj-5",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-6",
          1,
        ],
        "source": [
          "obj-5",
          1,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;

exports[`snapshot > matches snapshot: edge_cases > edge_cases 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "comment",
        "numinlets": 1,
        "numoutlets": 0,
        "patching_rect": [
          50,
          50,
          200,
          20,
        ],
        "text": "A -> B -> C",
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          200,
          50,
          80,
          22,
        ],
        "text": "*~ 0.5",
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          110,
          80,
          22,
        ],
        "text": "+~ 0.1",
      },
    },
    {
      "box": {
        "id": "obj-4",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          100,
          200,
          50,
          20,
        ],
      },
    },
    {
      "box": {
        "id": "obj-5",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 0,
        "patching_rect": [
          350,
          50,
          80,
          22,
        ],
        "text": "send mybus",
      },
    },
    {
      "box": {
        "id": "obj-6",
        "maxclass": "newobj",
        "numinlets": 0,
        "numoutlets": 1,
        "outlettype": [
          "",
        ],
        "patching_rect": [
          500,
          50,
          80,
          22,
        ],
        "text": "receive mybus",
      },
    },
    {
      "box": {
        "id": "obj-7",
        "maxclass": "message",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "",
        ],
        "patching_rect": [
          650,
          50,
          80,
          22,
        ],
        "text": "open file.txt",
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;

exports[`snapshot > matches snapshot: midi_synth > midi_synth 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "newobj",
        "numinlets": 0,
        "numoutlets": 3,
        "outlettype": [
          "int",
          "int",
          "int",
        ],
        "patching_rect": [
          50,
          50,
          80,
          22,
        ],
        "text": "notein",
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 8,
        "outlettype": [
          "",
          "",
          "",
          "",
          "",
          "",
          "",
          "",
        ],
        "patching_rect": [
          50,
          110,
          80,
          22,
        ],
        "text": "midiparse",
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "float",
        ],
        "patching_rect": [
          50,
          170,
          80,
          22,
        ],
        "text": "mtof",
      },
    },
    {
      "box": {
        "id": "obj-4",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          230,
          80,
          22,
        ],
        "text": "cycle~ 440",
      },
    },
    {
      "box": {
        "id": "obj-5",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 2,
        "outlettype": [
          "signal",
          "bang",
        ],
        "patching_rect": [
          200,
          170,
          80,
          22,
        ],
        "text": "line~",
      },
    },
    {
      "box": {
        "id": "obj-6",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          290,
          80,
          22,
        ],
        "text": "*~",
      },
    },
    {
      "box": {
        "id": "obj-7",
        "maxclass": "gain~",
        "numinlets": 2,
        "numoutlets": 2,
        "outlettype": [
          "signal",
          "signal",
        ],
        "patching_rect": [
          50,
          350,
          34,
          130,
        ],
      },
    },
    {
      "box": {
        "id": "obj-8",
        "maxclass": "ezdac~",
        "numinlets": 2,
        "numoutlets": 0,
        "patching_rect": [
          50,
          410,
          52,
          36,
        ],
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "notein -> midiparse -> mtof -> cycle~ -> *~ -> gain~ -> ezdac~",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-2",
          0,
        ],
        "source": [
          "obj-1",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-4",
          0,
        ],
        "source": [
          "obj-3",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-6",
          0,
        ],
        "source": [
          "obj-4",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-7",
          0,
        ],
        "source": [
          "obj-6",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-8",
          0,
        ],
        "source": [
          "obj-7",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-8",
          1,
        ],
        "source": [
          "obj-7",
          1,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-5",
          0,
        ],
        "source": [
          "obj-2",
          1,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-6",
          1,
        ],
        "source": [
          "obj-5",
          0,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;

exports[`snapshot > matches snapshot: position_override > position_override 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "comment",
        "numinlets": 1,
        "numoutlets": 0,
        "patching_rect": [
          50,
          30,
          200,
          20,
        ],
        "text": "Title",
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          50,
          80,
          50,
          20,
        ],
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          110,
          80,
          22,
        ],
        "text": "cycle~ 440",
      },
    },
    {
      "box": {
        "id": "obj-4",
        "maxclass": "newobj",
        "numinlets": 3,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          170,
          80,
          22,
        ],
        "text": "lores~ 1000 0.5",
      },
    },
    {
      "box": {
        "id": "obj-5",
        "maxclass": "ezdac~",
        "numinlets": 2,
        "numoutlets": 0,
        "patching_rect": [
          50,
          230,
          52,
          36,
        ],
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-4",
          0,
        ],
        "source": [
          "obj-3",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-5",
          0,
        ],
        "source": [
          "obj-4",
          0,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;

exports[`snapshot > matches snapshot: subpatcher > subpatcher 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 2,
        "outlettype": [
          "",
          "",
        ],
        "patcher": {
          "appversion": {
            "major": 8,
            "minor": 6,
            "platform": "macintel",
            "processor": "x86",
            "revision": 4,
          },
          "assistshowspatchername": 0,
          "bglocked": 0,
          "bottomtoolbarpinned": 0,
          "boxanimatetime": 200,
          "boxes": [
            {
              "box": {
                "comment": "audio input",
                "id": "obj-1",
                "maxclass": "inlet~",
                "numinlets": 0,
                "numoutlets": 1,
                "outlettype": [
                  "signal",
                ],
                "patching_rect": [
                  50,
                  50,
                  25,
                  25,
                ],
              },
            },
            {
              "box": {
                "comment": "audio left",
                "id": "obj-2",
                "maxclass": "outlet~",
                "numinlets": 1,
                "numoutlets": 0,
                "patching_rect": [
                  50,
                  110,
                  25,
                  25,
                ],
              },
            },
            {
              "box": {
                "comment": "audio right",
                "id": "obj-3",
                "maxclass": "outlet~",
                "numinlets": 1,
                "numoutlets": 0,
                "patching_rect": [
                  50,
                  170,
                  25,
                  25,
                ],
              },
            },
            {
              "box": {
                "id": "obj-4",
                "maxclass": "newobj",
                "numinlets": 1,
                "numoutlets": 1,
                "outlettype": [
                  "signal",
                ],
                "patching_rect": [
                  50,
                  230,
                  80,
                  22,
                ],
                "text": "tapin~ 500",
              },
            },
            {
              "box": {
                "id": "obj-5",
                "maxclass": "newobj",
                "numinlets": 1,
                "numoutlets": 1,
                "outlettype": [
                  "signal",
                ],
                "patching_rect": [
                  50,
                  290,
                  80,
                  22,
                ],
                "text": "tapout~ 250",
              },
            },
            {
              "box": {
                "id": "obj-6",
                "maxclass": "newobj",
                "numinlets": 2,
                "numoutlets": 1,
                "outlettype": [
                  "signal",
                ],
                "patching_rect": [
                  50,
                  350,
                  80,
                  22,
                ],
                "text": "*~ 0.4",
              },
            },
          ],
          "classnamespace": "box",
          "default_fontface": 0,
          "default_fontname": "Arial",
          "default_fontsize": 12,
          "description": "",
          "devicewidth": 0,
          "digest": "",
          "enablehscroll": 1,
          "enablevscroll": 1,
          "fileversion": 1,
          "gridonopen": 2,
          "gridsize": [
            15,
            15,
          ],
          "gridsnaponopen": 0,
          "lefttoolbarpinned": 0,
          "lines": [
            {
              "patchline": {
                "destination": [
                  "obj-4",
                  0,
                ],
                "source": [
                  "obj-1",
                  0,
                ],
              },
            },
            {
              "patchline": {
                "destination": [
                  "obj-5",
                  0,
                ],
                "source": [
                  "obj-4",
                  0,
                ],
              },
            },
            {
              "patchline": {
                "destination": [
                  "obj-6",
                  0,
                ],
                "source": [
                  "obj-5",
                  0,
                ],
              },
            },
            {
              "patchline": {
                "destination": [
                  "obj-4",
                  0,
                ],
                "source": [
                  "obj-6",
                  0,
                ],
              },
            },
            {
              "patchline": {
                "destination": [
                  "obj-2",
                  0,
                ],
                "source": [
                  "obj-5",
                  0,
                ],
              },
            },
            {
              "patchline": {
                "destination": [
                  "obj-3",
                  0,
                ],
                "source": [
                  "obj-5",
                  0,
                ],
              },
            },
          ],
          "objectsnaponopen": 1,
          "openinpresentation": 0,
          "openrect": [
            0,
            0,
            0,
            0,
          ],
          "rect": [
            100,
            100,
            640,
            480,
          ],
          "righttoolbarpinned": 0,
          "statusbarvisible": 2,
          "style": "",
          "subpatcher_template": "",
          "tags": "",
          "tallnewobj": 0,
          "toolbars_unpinned_last_save": 0,
          "toolbarvisible": 2,
          "toptoolbarpinned": 0,
        },
        "patching_rect": [
          50,
          110,
          100,
          22,
        ],
        "text": "p delay_fx",
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 1,
        "outlettype": [
          "signal",
        ],
        "patching_rect": [
          50,
          50,
          80,
          22,
        ],
        "text": "cycle~ 440",
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "ezdac~",
        "numinlets": 2,
        "numoutlets": 0,
        "patching_rect": [
          50,
          170,
          52,
          36,
        ],
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-1",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-1",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-3",
          1,
        ],
        "source": [
          "obj-1",
          1,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;

exports[`snapshot > matches snapshot: trigger_and_routing > trigger_and_routing 1`] = `
{
  "appversion": {
    "major": 8,
    "minor": 6,
    "platform": "macintel",
    "processor": "x86",
    "revision": 4,
  },
  "assistshowspatchername": 0,
  "bglocked": 0,
  "bottomtoolbarpinned": 0,
  "boxanimatetime": 200,
  "boxes": [
    {
      "box": {
        "id": "obj-1",
        "maxclass": "newobj",
        "numinlets": 0,
        "numoutlets": 1,
        "outlettype": [
          "bang",
        ],
        "patching_rect": [
          50,
          50,
          80,
          22,
        ],
        "text": "loadbang",
      },
    },
    {
      "box": {
        "id": "obj-2",
        "maxclass": "newobj",
        "numinlets": 1,
        "numoutlets": 3,
        "outlettype": [
          "bang",
          "bang",
          "bang",
        ],
        "patching_rect": [
          50,
          110,
          80,
          22,
        ],
        "text": "trigger bang bang bang",
      },
    },
    {
      "box": {
        "id": "obj-3",
        "maxclass": "newobj",
        "numinlets": 3,
        "numoutlets": 1,
        "outlettype": [
          "bang",
        ],
        "patching_rect": [
          50,
          170,
          80,
          22,
        ],
        "text": "metro 500",
      },
    },
    {
      "box": {
        "id": "obj-4",
        "maxclass": "newobj",
        "numinlets": 4,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          200,
          170,
          80,
          22,
        ],
        "text": "counter 0 15",
      },
    },
    {
      "box": {
        "id": "obj-5",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          350,
          170,
          50,
          20,
        ],
      },
    },
    {
      "box": {
        "id": "obj-6",
        "maxclass": "newobj",
        "numinlets": 2,
        "numoutlets": 2,
        "outlettype": [
          "",
          "",
        ],
        "patching_rect": [
          200,
          110,
          80,
          22,
        ],
        "text": "gate 2",
      },
    },
    {
      "box": {
        "id": "obj-7",
        "maxclass": "toggle",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          200,
          50,
          24,
          24,
        ],
      },
    },
    {
      "box": {
        "id": "obj-8",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          500,
          170,
          50,
          20,
        ],
      },
    },
    {
      "box": {
        "id": "obj-9",
        "maxclass": "number",
        "numinlets": 1,
        "numoutlets": 1,
        "outlettype": [
          "int",
        ],
        "patching_rect": [
          650,
          170,
          50,
          20,
        ],
      },
    },
  ],
  "classnamespace": "box",
  "default_fontface": 0,
  "default_fontname": "Arial",
  "default_fontsize": 12,
  "description": "",
  "devicewidth": 0,
  "digest": "",
  "enablehscroll": 1,
  "enablevscroll": 1,
  "fileversion": 1,
  "gridonopen": 2,
  "gridsize": [
    15,
    15,
  ],
  "gridsnaponopen": 0,
  "lefttoolbarpinned": 0,
  "lines": [
    {
      "patchline": {
        "destination": [
          "obj-2",
          0,
        ],
        "source": [
          "obj-1",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-3",
          0,
        ],
        "source": [
          "obj-2",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-4",
          0,
        ],
        "source": [
          "obj-2",
          1,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-5",
          0,
        ],
        "source": [
          "obj-2",
          2,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-6",
          0,
        ],
        "source": [
          "obj-7",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-8",
          0,
        ],
        "source": [
          "obj-6",
          0,
        ],
      },
    },
    {
      "patchline": {
        "destination": [
          "obj-9",
          0,
        ],
        "source": [
          "obj-6",
          1,
        ],
      },
    },
  ],
  "objectsnaponopen": 1,
  "openinpresentation": 0,
  "openrect": [
    0,
    0,
    0,
    0,
  ],
  "rect": [
    100,
    100,
    640,
    480,
  ],
  "righttoolbarpinned": 0,
  "statusbarvisible": 2,
  "style": "",
  "subpatcher_template": "",
  "tags": "",
  "tallnewobj": 0,
  "toolbars_unpinned_last_save": 0,
  "toolbarvisible": 2,
  "toptoolbarpinned": 0,
}
`;
